<resources>
    <string name="app_name">Koskosan</string>
    <string name="titleSplash">WELCOME TO KOSKU</string>
    <string name="home">Home</string>
    <string name="waiting">Wait</string>
    <string name="chat">Chat</string>
    <string name="traffic">Traffic</string>
    <string name="profile">Profile</string>
    <string name="see_more">See More</string>
    <string name="kos_putra">Kos Putra</string>
    <string name="kos_putri">Kos Putri</string>
    <string name="option">Pilihan</string>
    <string name="welcome">WELCOME</string>
    <string name="dapur">Dapur</string>
    <string name="ruang">Ruangan</string>
    <string name="kamar">Kamar</string>
    <string name="selected_room">Pilih Kamar</string>
    <string name="mulai_kos">Mulai Kos</string>
    <string name="koskosan">Bapak Kos</string>
    <string name="email">Email</string>
    <string name="fasilitas">Facilities</string>
    <string name="wifi">Wifi</string>
    <string name="idr">IDR 250.000</string>
    <string name="one_room">Kos Putra</string>
    <string name="one_room1">Kos Putri</string>
    <string name="booking">Booking Now</string>
    <string name="bed">Bed</string>
    <string name="bathroom">Bathroom</string>
    <string name="breakfast">Breakfast</string>
    <string name="contiune">Checkout Now</string>
    <string name="medium_class">Medium Class</string>
    <string name="your_room">Your room</string>
    <string name="about">Tentang</string>
    <string name="room">Ruangan</string>
    <string name="away">Away</string>
    <string name="customer_data">Customer data</string>
    <string name="bjm">Bjm</string>
    <string name="banjarmasin">Banjarmasin</string>
    <string name="lorem">Selamat datang di Bapak Kos saya selaku owner nya langsung, tempat kos berada di komplek Gardu mekar indah dengan keamaan yang terjamin dah juga dekat dengan beberapa kampus</string>
    <string name="password">Password</string>
    <string name="loremput">Tempat kos ini berada di komplek gardu mekar indah Banjarmasin untuk keamanan dan kenyamanan kami berani jamin kos kami yang terbaik, kos ini juga dekat dengan beberapa kampus</string>
    <string name="phone">No Whatshap</string>
    <string name="sub">Silahkan Login Menggunakan Akun <b>Google</b> anda</string>
    <string name="submit">Register Now</string>
    <string name="sub1">Anda belum memiliki Akun? Silahkan <b>Daftar</b> disini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category rating</string>
    <string name="mapbox_access_token">sk.eyJ1Ijoia2FzcHVsYW53YXIiLCJhIjoiY2tzYTZzNjl3MDByYzJ2bXJna3BhcWtpciJ9.Mgjhdw61tws1cg8H0FdJmg</string>
    <string name="user_location_permission_explanation">user location permission explanation</string>
    <string name="user_location_permission_not_granted">user location permission not granted</string>
</resources>