<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".dashboard.DetailPutriActivity">

    <Button
        android:id="@+id/btnBooking"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/layout_yellow"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/booking"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3" />

    <TextView
        android:id="@+id/tvhargaPutri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/idr"
        android:textColor="@color/teal_700"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toTopOf="@+id/btnBooking" />

    <ImageView
        android:id="@+id/ivposterPutri"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvlokasiPutri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Banjarmasin"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/medium_class"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivposterPutri"
        app:layout_constraintStart_toStartOf="@+id/tvlokasiPutri" />

    <TextView
        android:id="@+id/tvratingPutri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="9.7"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_baseline_star_24_putri"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvlokasiPutri" />



    <TextView
        android:id="@+id/tvkosPutri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/one_room"
        android:textColor="@color/drakblue"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBooking"
        app:layout_constraintStart_toStartOf="@+id/tvhargaPutri"
        app:layout_constraintTop_toBottomOf="@+id/tvhargaPutri" />

    <ImageView
        android:id="@+id/backPutri"
        android:background="@drawable/layout_login"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/layout_login"
        app:layout_constraintBottom_toTopOf="@+id/btnBooking"
        app:layout_constraintEnd_toEndOf="@+id/tvratingPutri"
        app:layout_constraintStart_toStartOf="@+id/tvlokasiPutri"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_login"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/about"
                android:textColor="@color/drakblue"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvdescPutri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Haloo"
                android:textColor="@color/abuabu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/room"
                android:textColor="@color/drakblue"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="#f2f2f2"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="14dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/gambar1Putri"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/background" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="@string/dapur"
                            android:textColor="@color/teal_700" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="#f2f2f2"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="14dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/gambar2Putri"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/background" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="@string/ruang"
                            android:textColor="@color/teal_700" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="#f2f2f2"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="14dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/gambar3Putri"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/background" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="@string/kamar"
                            android:textColor="@color/teal_700" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/fasilitas"
                android:textColor="@color/drakblue"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvwifiPutri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_detail"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/wifi"
                    android:textColor="@color/teal_700" />

                <TextView
                    android:id="@+id/tvbedPutri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_detail"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/bed"
                    android:textColor="@color/teal_700" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvbreakfastPutri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_detail"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/breakfast"
                    android:textColor="@color/teal_700" />

                <TextView
                    android:id="@+id/tvbathroomPutri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_detail"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/bathroom"
                    android:textColor="@color/teal_700" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>